2015.05.15

PeakSegJointSeveral function for running the C solver using several
suboptimality parameters, and taking the model with the min Poisson
loss for each model size.

rename seg_start_end to bin_start_end.

2015.05.14

real data sets where buggy heuristic does not recover visually optimal
segmentations.

bugfix for heuristic optimization for cases where there is a solution
with non-zero index (writes new cumsum vec) before a better solution
with zero index (does not write a new cumsum vec, and was stuck with
the old cumsum vec).

2015.05.05

Squared hinge loss FISTA implementation.

2015.04.17

Bugfixes for C memory issues.

2015.04.14

Fast C implementation of PeakSegJointHeuristic.

2015.04.02

binSum, multi* copied from tdhock/PeakSegDP.