@@ -1,5 +1,7 @@
 2015.05.15
 
+ConvertModelList returns segments for model with 0 peaks.
+
 PeakSegJointSeveral function for running the C solver using several
 suboptimality parameters, and taking the model with the min Poisson
 loss for each model size.
